Fix: Spacing between details and headings
Add CSS to add a margin above the first details element after
a heading or a paragraph.

Fix #371
Close #371

--- a/src/sonarwhal-theme/source/core/css/base.css
+++ b/src/sonarwhal-theme/source/core/css/base.css
@@ -30,6 +30,12 @@ details {
     display: block;
 }
 
+h2 + details,
+h3 + details,
+p + details {
+    margin-top: 2.4rem;
+}
+
 /* Style focusable elements that need focus ring. Others reset and receive border styles in controls/color.css */
 a:focus,
 li:focus,
